adjusted the contact page footer issue where it was way too high up on the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,3 +72,6 @@ footer {
   list-style-type: none;
 }
 
+.footerAdjuster {
+  margin-bottom: 100px;
+}
